--- a/css/main.css
+++ b/css/main.css
@@ -146,12 +146,34 @@ h5 {
 
 
 /* Fin Régles text */
+#css ul  {
+    list-style: none;
+     font-family: 'Lobster', cursive;
+     text-align: center;
+     margin-top: 15em;
+}
+
+#css ul li {
+    margin-top: 2em;
+
+}
+
+#css ul li a {
+    color: black;
+    font-size: 20px;
+}
 
 #navbar {
+    font-family: 'Lobster', cursive;
     text-align: center;
    background-color: #ffffff;
     opacity: 0.4;
     
+}
+
+
+.navbar-toggler-icon{
+    color: black;
 }
 
 #navbar a {
@@ -161,8 +183,19 @@ h5 {
 
 
 /*  Start of Rules Csss*/
+
+#color2{
+    background-image: url(../img/papier3.jpg);
+    background-repeat: no-repeat;
+    color: black;
+    font-family: 'Lobster', cursive;
+     font-size: 15px;
+
+}
 #color{
     background-image: url(../img/papier2.jpg);
+     font-family: 'Lobster', cursive;
+     font-size: 15px;
 
     color:white;
 }
