--- a/css/main.css
+++ b/css/main.css
@@ -104,9 +104,14 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
-body{
+body {
     background-image: url(../img/papier.jpg)
 }
+
+ul li {
+    list-style: none;
+}
+
 /* Rélges type marges  */
 
 .m-t-1 {
@@ -146,33 +151,32 @@ h5 {
 
 
 /* Fin Régles text */
-#css ul  {
+
+#css ul {
+    display: flex;
     list-style: none;
-     font-family: 'Lobster', cursive;
-     text-align: center;
-     margin-top: 15em;
+    font-family: 'Lobster', cursive;
+    text-align: center;
 }
 
 #css ul li {
-    margin-top: 2em;
-
+    margin-left: 1em;
 }
 
 #css ul li a {
     color: black;
-    font-size: 20px;
+    font-size: 15px;
 }
 
 #navbar {
+    height: 38px;
     font-family: 'Lobster', cursive;
     text-align: center;
-   background-color: #ffffff;
+    background-color: #ffffff;
     opacity: 0.4;
-    
 }
 
-
-.navbar-toggler-icon{
+.navbar-toggler-icon {
     color: black;
 }
 
@@ -184,33 +188,67 @@ h5 {
 
 /*  Start of Rules Csss*/
 
-#color2{
-    background-image: url(../img/papier3.jpg);
-    background-repeat: no-repeat;
-    color: black;
-    font-family: 'Lobster', cursive;
-     font-size: 15px;
-
-}
-#color{
+#color2 {
+    /* background-image: url(../img/papier3.jpg); */
     background-image: url(../img/papier2.jpg);
-     font-family: 'Lobster', cursive;
-     font-size: 15px;
+    color: white;
+    font-family: 'Lobster', cursive;
+    font-size: 25px;
+}
+#color2 a {
+    color: white;
 
-    color:white;
 }
 
-.card  {
-    height: 260px;
-   
+.modal{
+     background-image: url(../img/papier3.jpg);
+
+}
+
+.cv{
+      background-image: url(../img/papier3.jpg);
+    font-family: 'Lobster', cursive;
+
+}
+.centre {
+    text-align: center;
+     font-family: 'Lobster', cursive;
+
+}
+
+.adresse , .adresse a {
+    color: black;
+}
+
+.modal-content{
+     font-size: 17px;
+    text-align: center;
+      background-image: url(../img/papier2.jpg);
+      color: white;
+
+}
+
+.modal-title{
+     font-family: 'Lobster', cursive;
+     font-size: 25px;
+     text-align: center;
+
+}
+
+
+
+#color {
+    background-image: url(../img/papier2.jpg);
+    font-family: 'Lobster', cursive;
+    font-size: 25px;
+    color: white;
 }
 
 .card {
-    width: 100%;
     margin-top: 2em;
 }
 
-.cart  p {
+.cart p {
     font-family: 'Inconsolata', mospace;
 }
 
@@ -223,6 +261,12 @@ nav {
 .droite {
     width: 40%;
 }
+
+.bare{
+    margin-top: 1em;
+    border-top: solid white 1px;
+}
+
 
 
 /*Start of rules index.html*/
@@ -238,148 +282,120 @@ nav {
     background-color: orange;
 }
 
-.jumbotron {
-    background-color: #222;
-    color: white;
-    padding-bottom: 5em;
-}
-
-
-.btn .btn-outline-success{
+.btn .btn-outline-success {
     color: black;
-    
     border: 1px solid black;
 }
 
 
-
 /*annimation*/
 
-.wit{
-   
+.wit {
     margin-top: 2em;
-     width: 200px;
-     height: 50px;
-    
+    width: 200px;
+    height: 50px;
 }
 
-.carousel .slide{
+.carousel .slide {
     height: 300px;
 }
 
-#block{
+#block {
     text-align: center;
     margin-top: 5em;
-} 
-
-.card img {
-    animation-name:images; 
-    animation-duration: 5s ; 
 }
 
+.card img {
+    animation-name: images;
+    animation-duration: 5s;
+}
 
-
-
-@keyframes images{
+@keyframes images {
+    form{
+      
+    }
     1% {
         width: 0px;
         height: 0px
     }
-
-    to{
+    to {
         width: 150px;
-        height: 150px; 
+        height: 150px;
     }
 }
 
-.card h2 , .card p {
+.card h2,
+.card p {
     animation-name: text;
-    animation-duration:  5s ; 
-} 
-
-
+    animation-duration: 5s;
+}
 
 @keyframes text {
-
     1% {
         font-size: 0px;
     }
-
     to {
         font-size: 15px;
     }
-} 
+}
 
- .annime {
-     animation-name:test; 
-     animation-duration:5s; 
-      transition: width 2s, height 2s;
-     
+.annime {
+    animation-name: test;
+    animation-duration: 5s;
+    transition: width 1s, font-size 1s;  ;
+}
 
- } 
-
-
-
- @keyframes test{
-
-    5%{
+@keyframes test {
+    5% {
         width: 5%;
         font-size: 0px;
-        display: block;
+        
     }
-   10%{
+    10% {
         width: 10%;
     }
-    15%{
+    15% {
         width: 15%;
     }
-    20%{
+    20% {
         width: 20%;
-       
     }
-    25%{
+    25% {
         width: 25%;
-        
-        
     }
-    30%{ 
+    30% {
         width: 30%;
-        
     }
-    40%{
+    40% {
         width: 40%;
-        
     }
-    50%{
-        width: 50%;
+    50% {
+        width: 45%;
     }
-    55%{
+    55% {
         width: 55%;
         font-size: 1px;
     }
-
-
-    60%{
+    60% {
         width: 60%;
         font-size: 5px;
     }
-
-    70%{
+    70% {
         width: 70%;
     }
-    80%{
+    80% {
         width: 80%;
     }
-    90%{
+    90% {
         width: 90%;
     }
-
-to {
+    to {
         width: 100%;
     }
-     
+}
 
- }
+
+
 
 /* ==========================================================================
    Helper classes
